--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,10 @@ body {
   margin: auto;
   max-width: 100vw;
 }
+
+.navbar-scroll {
+  background-color: white;
+  transition: all 0.3s ease; /* Set your desired background color */
+  /* Set your desired padding */
+  /* Add additional styles for the scrolled state */
+}
